Se realizo la estructura (layout) a las demas paginas, se agrego y modifico estilos al index

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -282,22 +282,6 @@
           "height": 0,
           "width": 0
         },
-        "265d1c59": {
-          "id": "265d1c59",
-          "path": "css/estilos-dist.css",
-          "output": "css/estilos-dist-dist.css",
-          "name": "estilos-dist.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "b031e595": {
           "id": "b031e595",
           "path": "fonts/fonts.css",
@@ -319,6 +303,61 @@
           "path": "fonts/icomoon/style.css",
           "output": "fonts/icomoon/style-dist.css",
           "name": "style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "40a74129": {
+          "id": "40a74129",
+          "path": "img/nintendo.png",
+          "output": "img/nintendo.png",
+          "name": "nintendo.png",
+          "category": "IMAGE",
+          "size": 29413,
+          "type": "png",
+          "initialSize": 29413,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fcea358b": {
+          "id": "fcea358b",
+          "path": "img/playstation.png",
+          "output": "img/playstation.png",
+          "name": "playstation.png",
+          "category": "IMAGE",
+          "size": 27859,
+          "type": "png",
+          "initialSize": 27859,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4d001728": {
+          "id": "4d001728",
+          "path": "img/xbox.png",
+          "output": "img/xbox.png",
+          "name": "xbox.png",
+          "category": "IMAGE",
+          "size": 41329,
+          "type": "png",
+          "initialSize": 41329,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "265d1c59": {
+          "id": "265d1c59",
+          "path": "css/estilos-dist.css",
+          "output": "css/estilos-dist-dist.css",
+          "name": "estilos-dist.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
