--- a/prepros.cfg
+++ b/prepros.cfg
@@ -469,7 +469,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enable": true
         },
         "deployment": {
           "ftpHost": "",
