Se agrego favicon y a manera de prueba una likebox al aside

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -449,6 +449,19 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "051dc152": {
+          "id": "051dc152",
+          "path": "img/Favicon/favicon.png",
+          "output": "img/Favicon/favicon.png",
+          "name": "favicon.png",
+          "category": "IMAGE",
+          "size": 3982,
+          "type": "png",
+          "initialSize": 3982,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
