Se cambio de nuevo la estructura de la pagina, se realizo el slider y se agregaron nuevos diseños a las paginas

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -57,84 +57,6 @@
           "height": 0,
           "width": 0
         },
-        "285afffa": {
-          "id": "285afffa",
-          "path": "img/gm.jpg",
-          "output": "img/gm.jpg",
-          "name": "gm.jpg",
-          "category": "IMAGE",
-          "size": 21166,
-          "type": "jpg",
-          "initialSize": 21166,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "b67dd641": {
-          "id": "b67dd641",
-          "path": "img/lionhead.jpg",
-          "output": "img/lionhead.jpg",
-          "name": "lionhead.jpg",
-          "category": "IMAGE",
-          "size": 62838,
-          "type": "jpg",
-          "initialSize": 62838,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "628fa5e7": {
-          "id": "628fa5e7",
-          "path": "img/mario.jpg",
-          "output": "img/mario.jpg",
-          "name": "mario.jpg",
-          "category": "IMAGE",
-          "size": 52638,
-          "type": "jpg",
-          "initialSize": 52638,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "432ea9b3": {
-          "id": "432ea9b3",
-          "path": "img/mg.jpg",
-          "output": "img/mg.jpg",
-          "name": "mg.jpg",
-          "category": "IMAGE",
-          "size": 288880,
-          "type": "jpg",
-          "initialSize": 288880,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "838ff628": {
-          "id": "838ff628",
-          "path": "img/nvi.jpg",
-          "output": "img/nvi.jpg",
-          "name": "nvi.jpg",
-          "category": "IMAGE",
-          "size": 73677,
-          "type": "jpg",
-          "initialSize": 73677,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "1d4c68b8": {
-          "id": "1d4c68b8",
-          "path": "img/por.jpg",
-          "output": "img/por.jpg",
-          "name": "por.jpg",
-          "category": "IMAGE",
-          "size": 192377,
-          "type": "jpg",
-          "initialSize": 192377,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "8224084e": {
           "id": "8224084e",
           "path": "img/sf.jpg",
@@ -144,45 +66,6 @@
           "size": 188770,
           "type": "jpg",
           "initialSize": 188770,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "358dbf74": {
-          "id": "358dbf74",
-          "path": "img/snes.jpg",
-          "output": "img/snes.jpg",
-          "name": "snes.jpg",
-          "category": "IMAGE",
-          "size": 36197,
-          "type": "jpg",
-          "initialSize": 36197,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "7deecb15": {
-          "id": "7deecb15",
-          "path": "img/sw.jpeg",
-          "output": "img/sw.jpeg",
-          "name": "sw.jpeg",
-          "category": "IMAGE",
-          "size": 270184,
-          "type": "jpeg",
-          "initialSize": 270184,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "d4010075": {
-          "id": "d4010075",
-          "path": "img/xbox-live.jpg",
-          "output": "img/xbox-live.jpg",
-          "name": "xbox-live.jpg",
-          "category": "IMAGE",
-          "size": 29099,
-          "type": "jpg",
-          "initialSize": 29099,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -199,22 +82,6 @@
           "optimized": false,
           "height": 0,
           "width": 0
-        },
-        "37b7f6a1": {
-          "id": "37b7f6a1",
-          "path": "fonts/icomoon/style.css",
-          "output": "fonts/icomoon/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         },
         "40a74129": {
           "id": "40a74129",
@@ -254,28 +121,6 @@
           "optimized": false,
           "height": 0,
           "width": 0
-        },
-        "72d25cf0": {
-          "id": "72d25cf0",
-          "path": "component/header.html",
-          "output": "component/header.html",
-          "name": "header.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "dbb85b41": {
-          "id": "dbb85b41",
-          "path": "component/footer.html",
-          "output": "component/footer.html",
-          "name": "footer.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
         },
         "50ef0fa9": {
           "id": "50ef0fa9",
@@ -325,83 +170,6 @@
           "parents": [],
           "type": "css"
         },
-        "98304de5": {
-          "id": "98304de5",
-          "path": "module/home.html",
-          "output": "module/home.html",
-          "name": "home.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "591bd83d": {
-          "id": "591bd83d",
-          "path": "module/news.html",
-          "output": "module/news.html",
-          "name": "news.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "745abac6": {
-          "id": "745abac6",
-          "path": "module/consoles.html",
-          "output": "module/consoles.html",
-          "name": "consoles.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "e37b0a41": {
-          "id": "e37b0a41",
-          "path": "module/genders.html",
-          "output": "module/genders.html",
-          "name": "genders.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "58d15a6d": {
-          "id": "58d15a6d",
-          "path": "module/sagas.html",
-          "output": "module/sagas.html",
-          "name": "sagas.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "db61f94f": {
-          "id": "db61f94f",
-          "path": "module/about.html",
-          "output": "module/about.html",
-          "name": "about.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "e84a7fe6": {
-          "id": "e84a7fe6",
-          "path": "module/sitemap.html",
-          "output": "module/sitemap.html",
-          "name": "sitemap.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "b7861d62": {
           "id": "b7861d62",
           "path": "fonts/stylesheet.css",
@@ -450,15 +218,250 @@
           "parents": [],
           "type": "css"
         },
-        "051dc152": {
-          "id": "051dc152",
-          "path": "img/Favicon/favicon.png",
-          "output": "img/Favicon/favicon.png",
+        "bd69482e": {
+          "id": "bd69482e",
+          "path": "news.html",
+          "output": "news.html",
+          "name": "news.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "06aab3f4": {
+          "id": "06aab3f4",
+          "path": "consoles.html",
+          "output": "consoles.html",
+          "name": "consoles.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "8d3c6873": {
+          "id": "8d3c6873",
+          "path": "genders.html",
+          "output": "genders.html",
+          "name": "genders.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "58f83a57": {
+          "id": "58f83a57",
+          "path": "sagas.html",
+          "output": "sagas.html",
+          "name": "sagas.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6f076647": {
+          "id": "6f076647",
+          "path": "about.html",
+          "output": "about.html",
+          "name": "about.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "75c446b5": {
+          "id": "75c446b5",
+          "path": "img/slider/slider3.jpg",
+          "output": "img/slider/slider3.jpg",
+          "name": "slider3.jpg",
+          "category": "IMAGE",
+          "size": 153855,
+          "type": "jpg",
+          "initialSize": 153855,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7e774561": {
+          "id": "7e774561",
+          "path": "img/slider/slider4.jpg",
+          "output": "img/slider/slider4.jpg",
+          "name": "slider4.jpg",
+          "category": "IMAGE",
+          "size": 1150224,
+          "type": "jpg",
+          "initialSize": 1150224,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7a7cfd35": {
+          "id": "7a7cfd35",
+          "path": "img/slider/slider2.jpg",
+          "output": "img/slider/slider2.jpg",
+          "name": "slider2.jpg",
+          "category": "IMAGE",
+          "size": 92692,
+          "type": "jpg",
+          "initialSize": 92692,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "95a873c8": {
+          "id": "95a873c8",
+          "path": "img/slider/slider1.jpg",
+          "output": "img/slider/slider1.jpg",
+          "name": "slider1.jpg",
+          "category": "IMAGE",
+          "size": 188236,
+          "type": "jpg",
+          "initialSize": 188236,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "054cc60b": {
+          "id": "054cc60b",
+          "path": "sitemap.html",
+          "output": "sitemap.html",
+          "name": "sitemap.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0fda2bd6": {
+          "id": "0fda2bd6",
+          "path": "favicon.png",
+          "output": "favicon.png",
           "name": "favicon.png",
           "category": "IMAGE",
           "size": 3982,
           "type": "png",
           "initialSize": 3982,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "348f2c94": {
+          "id": "348f2c94",
+          "path": "img/news/lionhead.jpg",
+          "output": "img/news/lionhead.jpg",
+          "name": "lionhead.jpg",
+          "category": "IMAGE",
+          "size": 62838,
+          "type": "jpg",
+          "initialSize": 62838,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "20e2719d": {
+          "id": "20e2719d",
+          "path": "img/news/xbox-live.jpg",
+          "output": "img/news/xbox-live.jpg",
+          "name": "xbox-live.jpg",
+          "category": "IMAGE",
+          "size": 29099,
+          "type": "jpg",
+          "initialSize": 29099,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9cea5c5e": {
+          "id": "9cea5c5e",
+          "path": "img/news/nvidia.jpg",
+          "output": "img/news/nvidia.jpg",
+          "name": "nvidia.jpg",
+          "category": "IMAGE",
+          "size": 73677,
+          "type": "jpg",
+          "initialSize": 73677,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c04db509": {
+          "id": "c04db509",
+          "path": "img/news/starwars.jpeg",
+          "output": "img/news/starwars.jpeg",
+          "name": "starwars.jpeg",
+          "category": "IMAGE",
+          "size": 270184,
+          "type": "jpeg",
+          "initialSize": 270184,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "26c62ff4": {
+          "id": "26c62ff4",
+          "path": "img/consoles/nostalgic.jpg",
+          "output": "img/consoles/nostalgic.jpg",
+          "name": "nostalgic.jpg",
+          "category": "IMAGE",
+          "size": 192377,
+          "type": "jpg",
+          "initialSize": 192377,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4aa5cc1c": {
+          "id": "4aa5cc1c",
+          "path": "img/consoles/snes.jpg",
+          "output": "img/consoles/snes.jpg",
+          "name": "snes.jpg",
+          "category": "IMAGE",
+          "size": 36197,
+          "type": "jpg",
+          "initialSize": 36197,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6e3e28dc": {
+          "id": "6e3e28dc",
+          "path": "img/consoles/gba.jpg",
+          "output": "img/consoles/gba.jpg",
+          "name": "gba.jpg",
+          "category": "IMAGE",
+          "size": 21166,
+          "type": "jpg",
+          "initialSize": 21166,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "866b2886": {
+          "id": "866b2886",
+          "path": "img/consoles/mg.jpg",
+          "output": "img/consoles/mg.jpg",
+          "name": "mg.jpg",
+          "category": "IMAGE",
+          "size": 288880,
+          "type": "jpg",
+          "initialSize": 288880,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d70a7b07": {
+          "id": "d70a7b07",
+          "path": "img/consoles/mario.jpg",
+          "output": "img/consoles/mario.jpg",
+          "name": "mario.jpg",
+          "category": "IMAGE",
+          "size": 52638,
+          "type": "jpg",
+          "initialSize": 52638,
           "optimized": false,
           "height": 0,
           "width": 0
